[components][desk-tool] Fix size and alignment of icons in timeline

--- a/packages/@sanity/desk-tool/src/panes/documentPane/statusBar/documentStatusBarSparkline.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/statusBar/documentStatusBarSparkline.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-  --size: 1.8rem;
+  --size: 1.6875rem;
 }
 
 .root {
